# droidrun-android-world

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  build.sh  docker-compose.yml  gen-compose.sh  pyproject.toml  setup.py
eval/: android_world_bench.py  cli.py  runner.py  tools.py  tracker.py
eval/env/: boot.py  client.py
eval/portal/: keepalive.py
